# example-fix-bot

./: Cargo.toml  README.md
fix_bot_rust/: Cargo.toml
fix_bot_rust/src/: main.rs
fix_decoder/: Cargo.toml
fix_decoder/src/: flow_decoder.rs  lib.rs
fix_decoder/src/flow_decoder/util/: decoder.rs  encoder.rs  get_tags.rs  mod.rs  model.rs
fix_encoder/: Cargo.toml
fix_encoder/src/: fix-example.json  flow_encoder.rs  json_fix_example.json  json_fix_logon_example.json  lib.rs
logger_rust/: Cargo.toml
logger_rust/src/: lib.rs
