[package]
name = "fix_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
ringbuf = "0.3.1"
log = "*"
env_logger = "*"
signal-hook = "*"
libc = "*"
chrono = "0.4.21"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
fefix = "*"
fix_decoder = { path = "../fix_decoder" }
fix_encoder = { path = "../fix_encoder" }
bitwyre_logger = { path = "../logger_rust" }
serde_repr = "0.1.7"
fix_checksum = "0.0.1"
rand = "0.8.4"