[package]
name = "fix_decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.40"
fefix = { version = "*", features = ["json-encoding", "fix44"] }
serde_json = "1.0.96"
serde-aux = "*"
serde = { version = "1.0.163", features = ["derive"] }
chrono = "*"
ringbuf = "0.3.1"
fix_checksum = "0.0.1"
